[package]
name = "smoldot-light-c-bindings"
version = "0.1.0"
description = "C language bindings to a light client for Substrate-based blockchains"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
include.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

# TODO: force the "abort" panic strategy somehow?

[dependencies]
async-lock = { version = "3.1.0", features = ["std"] }
env_logger = "*"  # TODO:
fnv = { version = "1.0.7", default-features = false }
futures-lite = { version = "2.0.1" }
hashbrown = { version = "0.14.0", default-features = false }
smoldot-light = { version = "0.12.0", path = "../../light-base", default-features = false, features = ["std"] }
